# waytray

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
examples/scripts/: counter.sh  disk-usage.sh  todo-count.sh  uptime.sh
packaging/rpm/: waytray.spec
waytray-client/: Cargo.toml
waytray-client/src/: app.rs  daemon_proxy.rs  main.rs  menu_popover.rs  module_item.rs  tray_item.rs  window.rs
waytray-daemon/: Cargo.toml
waytray-daemon/src/: cache.rs  config.rs  config_watcher.rs  dbus_service.rs  dbusmenu.rs  host.rs  lib.rs  main.rs  notifications.rs  watcher.rs
waytray-daemon/src/modules/: battery.rs  brightness.rs  clock.rs  gpu.rs  mod.rs  network.rs  pipewire.rs  power_profiles.rs  privacy.rs  scripts.rs  system.rs  tray.rs  weather.rs
