[package]
name = "waytray-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GTK4 client for WayTray - accessible system tray window"

[[bin]]
name = "waytray"
path = "src/main.rs"

[dependencies]
# Shared types from daemon
waytray-daemon = { path = "../waytray-daemon" }

# D-Bus
zbus = { workspace = true }

# GTK4
gtk4 = { version = "0.9", features = ["v4_12"] }
gdk4 = "0.9"
gdk-pixbuf = "0.20"
glib = "0.20"
gio = "0.20"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async utilities
futures = "0.3"
async-channel = "2"
